tdf#112782: data-pilot-source is invalid in odf1.2 strict

Change-Id: Ie24c416cb9ba8de904bf6e725a60b62ce7787596
Reviewed-on: https://gerrit.libreoffice.org/65742
(cherry picked from commit 18b9f23f13fd503e94d669ab80b5d2354d1817a1)
Reviewed-on: https://gerrit.libreoffice.org/65884
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>